--- a/schedule.html
+++ b/schedule.html
@@ -58,73 +58,65 @@
                 <h2 class="text-2xl font-bold mb-4 text-center text-white">Main Stage</h2>
                 <div class="space-y-4">
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">08:00</p>
-                        <p class="text-white">Abertura dos portões/Credênciamento</p>
-                    </div>
-                    <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">09:20</p>
-                        <p class="text-white">Opening Ceremony</p>
-                    </div>
-                    <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">09:30 - 10:05</p>
-                        <p class="font-medium text-white">O que vi em dez anos como pesquisador de segurança</p>
+                        <p class="text-lg font-semibold text-yellow-400">09:30 - 10:10</p>
+                        <p class="font-medium text-white">Keynote de Abertura: Threat Hunting na prática</p>
                         <p class="text-sm text-gray-300">Fernando Mercês</p>
                         <a href="speakers/fernando-merces.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">10:10 - 10:45</p>
-                        <p class="font-medium text-white">The Shadow Behind Red Team Radiance</p>
-                        <p class="text-sm text-gray-300">Lucas Carmo</p>
-                        <a href="speakers/lucas-carmo.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
-                    </div>
-                    <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">10:50 - 11:25</p>
-                        <p class="font-medium text-white">Game Hacking: do Zero ao Kernel</p>
+                        <p class="text-lg font-semibold text-yellow-400">10:15 - 10:55</p>
+                        <p class="font-medium text-white">Hacking Biométrico: Explorando Vulnerabilidades em Sistemas de Reconhecimento</p>
                         <p class="text-sm text-gray-300">Abid Lohan</p>
                         <a href="speakers/abid-lohan.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">11:30 - 12:05</p>
-                        <p class="font-medium text-white">Malwares & EDRs</p>
+                        <p class="text-lg font-semibold text-yellow-400">11:00 - 11:40</p>
+                        <p class="font-medium text-white">Offensive Development</p>
+                        <p class="text-sm text-gray-300">Lucas Carmo</p>
+                        <a href="speakers/lucas-carmo.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
+                    </div>
+                    <div class="border-b border-gray-600 pb-4">
+                        <p class="text-lg font-semibold text-yellow-400">11:45 - 12:25</p>
+                        <p class="font-medium text-white">Hacking Mainframe</p>
                         <p class="text-sm text-gray-300">José Luiz Negreira</p>
                         <a href="speakers/jose-luiz-negreira.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">12:10 - 12:45</p>
-                        <p class="font-medium text-white">Ransomware vs EDR: Inside the Mind of Attackers</p>
+                        <p class="text-lg font-semibold text-yellow-400">12:30 - 13:10</p>
+                        <p class="font-medium text-white">Explorando vulnerabilidades em dispositivos IoT</p>
                         <p class="text-sm text-gray-300">Zoziel Pinto Freire</p>
                         <a href="speakers/zoziel-pinto-freire.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">13:00 - 14:30</p>
+                        <p class="text-lg font-semibold text-yellow-400">13:10 - 14:40</p>
                         <p class="font-medium text-white">Lunch Break</p>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">14:30 - 15:05</p>
+                        <p class="text-lg font-semibold text-yellow-400">14:40 - 15:20</p>
                         <p class="font-medium text-white">The Darkside of the Moon - How to Really Think About Anti Forensic</p>
                         <p class="text-sm text-gray-300">Iago Blambila</p>
                         <a href="speakers/iago-blambila.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">15:10 - 15:45</p>
+                        <p class="text-lg font-semibold text-yellow-400">15:25 - 16:05</p>
                         <p class="font-medium text-white">Exploração de vulnerabilidades de autorização em empresas de escala global</p>
                         <p class="text-sm text-gray-300">Paulo Raphael</p>
                         <a href="speakers/paulo-raphael.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">15:50 - 16:25</p>
+                        <p class="text-lg font-semibold text-yellow-400">16:10 - 16:50</p>
                         <p class="font-medium text-white">Segurança em Sistemas Distribuídos</p>
                         <p class="text-sm text-gray-300">Marcelo Almeida</p>
                         <a href="speakers/marcelo-almeida.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">16:30 - 17:05</p>
+                        <p class="text-lg font-semibold text-yellow-400">16:55 - 17:35</p>
                         <p class="font-medium text-white">Inception — Tips and tricks I've learned reversing vulnerabilities!</p>
                         <p class="text-sm text-gray-300">Nelson Brito</p>
                         <a href="speakers/nelson-brito.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">17:10 - 17:40</p>
+                        <p class="text-lg font-semibold text-yellow-400">17:40 - 18:10</p>
                         <p class="font-medium text-white">Sorteios e Cerimônia de Encerramento</p>
                     </div>
                 </div>
@@ -143,49 +135,49 @@
                         <p class="text-white">Sala fechadas (Cerimônia de abertura)</p>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">09:30</p>
-                        <p class="text-white">Sala fechadas (Keynote)</p>
+                        <p class="text-lg font-semibold text-yellow-400">09:30 - 10:10</p>
+                        <p class="text-white">Sala fechada (Keynote)</p>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">10:10 - 10:45</p>
+                        <p class="text-lg font-semibold text-yellow-400">10:15 - 10:55</p>
                         <p class="font-medium text-white">An approach of FBP for rapid development of offensive security tools</p>
                         <p class="text-sm text-gray-300">Heitor Gouvêa</p>
                         <a href="speakers/heitor-gouvea-2.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">10:50 - 11:25</p>
+                        <p class="text-lg font-semibold text-yellow-400">11:00 - 11:40</p>
                         <p class="font-medium text-white">Visualização de modelos de machine learning não-supervisionados</p>
                         <p class="text-sm text-gray-300">Pedro Sydenstricker</p>
                         <a href="speakers/pedro-sydenstricker.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">11:30 - 12:05</p>
+                        <p class="text-lg font-semibold text-yellow-400">11:45 - 12:25</p>
                         <p class="font-medium text-white">Análise de Malware em Dispositivos IoT</p>
                         <p class="text-sm text-gray-300">Bruno Dantas</p>
                         <a href="speakers/bruno-dantas.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">13:00 - 14:30</p>
+                        <p class="text-lg font-semibold text-yellow-400">13:10 - 14:40</p>
                         <p class="font-medium text-white">Lunch Break</p>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">14:30 - 15:05</p>
+                        <p class="text-lg font-semibold text-yellow-400">14:40 - 15:20</p>
                         <p class="font-medium text-white">Anatomia de um mini-AS: explorando fragmentos da infraestrutura global da internet</p>
                         <p class="text-sm text-gray-300">Rodrigo Ferreira</p>
                         <a href="speakers/rodrigo-ferreira.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">15:10 - 15:45</p>
+                        <p class="text-lg font-semibold text-yellow-400">15:25 - 16:05</p>
                         <p class="font-medium text-white">Segurança em Containers e Kubernetes</p>
                         <p class="text-sm text-gray-300">Luiz Custódio</p>
                         <a href="speakers/luiz-custodio.html" class="text-yellow-400 hover:text-yellow-300 text-sm">View details</a>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">16:30 - 17:05</p>
+                        <p class="text-lg font-semibold text-yellow-400">16:55 - 17:35</p>
                         <p class="text-white">Sala fechada (Keynote de encerramento)</p>
                     </div>
                     <div class="border-b border-gray-600 pb-4">
-                        <p class="text-lg font-semibold text-yellow-400">17:10 - 17:40</p>
+                        <p class="text-lg font-semibold text-yellow-400">17:40 - 18:10</p>
                         <p class="text-white">Sala fechada (Cerimônia de encerramento)</p>
                     </div>
                 </div>
